hphp/hack/test/typecheck/typing_good_xhp.php.like_types.exp
File "typing_good_xhp.php", line 19, characters 29-30:
XHP children must be compatible with XHPChild (Typing[4193])
File "typing_good_xhp.php", line 16, characters 24-29:
This is a dynamic value or a string or an object of type ConstVector<string>
